--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <script>
   $(function(){
-    $("#NavbarComponent").load("http://tt-lifeweb.cfbx.jp/component/navbar_component.html");
+    $("#NavbarComponent").load("https://syungyo0120.github.io/home/component/navbar_component.html");
   });
 </script>
 
